--- a/LKWSpringerApp.Web/Views/Media/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Media/Index.cshtml
@@ -40,7 +40,7 @@
                         <td>@client.ClientName</td>
                         <td>@client.MediaCount</td>
                         <td class="text-center">
-                            <a asp-action="Details" asp-route-id="@client.ClientId" class="btn btn-primary btn-sm">View Details</a>
+                            <a asp-action="Details" asp-route-id="@client.ClientId" class="btn btn-warning">View Details</a>
                         </td>
                     </tr>
                 }
