--- a/LKWSpringerApp.Web/Views/Shared/_Layout.cshtml
+++ b/LKWSpringerApp.Web/Views/Shared/_Layout.cshtml
@@ -62,6 +62,7 @@
     <footer class="border-top footer text-muted">
         <div class="footer-nav d-flex justify-content-center mt-4">
             <a asp-controller="Home" asp-action="Index" class="btn btn-primary mx-2">Home</a>
+            <a asp-controller="PinBoard" asp-action="Index" class="btn btn-primary mx-2">Pin Board</a>
             <a asp-controller="Driver" asp-action="Index" class="btn btn-primary mx-2">Drivers</a>
             <a asp-controller="Tour" asp-action="Index" class="btn btn-primary mx-2">Tours</a>
             <a asp-controller="Client" asp-action="Index" class="btn btn-primary mx-2">Clients</a>
