--- a/LKWSpringerApp.Web/wwwroot/css/site.css
+++ b/LKWSpringerApp.Web/wwwroot/css/site.css
@@ -211,3 +211,28 @@ header, footer {
     background-color: #BDBDBD;
     text-decoration: none;
 }
+
+.pinboard-index-wallpaper {
+    background-image: url('/images/pinBoardIndexPageWallpaper/1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: calc(100vh - 120px);
+    padding: 20px;
+    color: #fff;
+}
+    
+.pinboard-index-wallpaper h2 {
+    olor: #fff;
+}
+
+.table {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.table th, .table td {
+    color: #000;
+
+}
