--- a/LKWSpringerApp.Web/wwwroot/css/site.css
+++ b/LKWSpringerApp.Web/wwwroot/css/site.css
@@ -236,3 +236,58 @@ header, footer {
     color: #000;
 
 }
+
+.search-bar {
+    width: 100%;
+    padding: 0 15px;
+}
+
+@media (max-width: 576px) {
+    .search-bar .input-group {
+        max-width: 100%;
+    }
+
+        .search-bar .input-group input,
+        .search-bar .input-group button {
+            flex: 1 1 auto;
+        }
+
+        .search-bar .input-group button {
+            flex: 0 1 auto;
+        }
+}
+
+.search-bar {
+    width: 100%;
+    padding: 0 15px;
+}
+
+    .search-bar .input-group {
+        max-width: 800px;
+        width: 100%;
+    }
+
+        .search-bar .input-group input {
+            flex: 1;
+        }
+
+        .search-bar .input-group button {
+            flex: 0 1 auto;
+        }
+
+@media (max-width: 576px) { 
+    .search-bar .input-group {
+        max-width: 100%;
+    }
+
+        .search-bar .input-group input,
+        .search-bar .input-group button {
+            flex: 1 1 auto;
+        }
+
+        .search-bar .input-group button {
+            flex: 0 1 auto; 
+            font-size: 14px; 
+            padding: 0.375rem 0.75rem;
+        }
+}
