--- a/LKWSpringerApp.Web/Views/Media/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Media/Details.cshtml
@@ -57,9 +57,9 @@ else
                         <td style="width: 200px;">@media.Description</td>
                         <td style="vertical-align: middle;">
                             <div class="d-flex justify-content-center align-items-center gap-2">
-                                <a asp-action="Edit" asp-route-id="@media.Id" class="btn btn-warning">Edit</a>
-                                <a asp-action="Delete" asp-route-id="@media.Id" class="btn btn-danger">Delete</a>
+                                <a asp-action="Edit" asp-route-id="@media.Id" class="btn btn-success">Edit</a>
                                 <a asp-action="Index" class="btn btn-primary">Back</a>
+                                <a asp-action="Delete" asp-route-id="@media.Id" class="btn btn-danger">Delete</a>
                             </div>
                         </td>
                     </tr>
