--- a/LKWSpringerApp.Web/Areas/Admin/Views/_ViewStart.cshtml
+++ b/LKWSpringerApp.Web/Areas/Admin/Views/_ViewStart.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">@TempData["SuccessMessage"]</div>
+}
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">@TempData["ErrorMessage"]</div>
+}
