--- a/LKWSpringerApp.Web/Views/Client/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Details.cshtml
@@ -75,7 +75,7 @@
                         <p class="card-text">@image.Description</p>
                         @if (!string.IsNullOrEmpty(image.VideoUrl))
                         {
-                            <a href="@image.VideoUrl" target="_blank" class="btn btn-link p-0">View Video</a>
+                            <a href="@Url.Content($"~/{image.VideoUrl}")" target="_blank" class="btn btn-link p-0">View Video</a>
                         }
                     </div>
                 </div>
